src/assets/scss/_dashboard.scss
$color-orange: #F16C00;

.dashboard {
  position: relative;
  padding: 20px;
  font-size: 0;

  &__column {
    display: inline-block;
    width: 50%;
    vertical-align: top;

    &--left {
      padding-right: 10px;
      box-sizing: border-box;

      @media only screen and (max-width: 1440px) {
        width: 60%;
      }
    }

    &--right {
      padding-left: 10px;
      box-sizing: border-box;

      @media only screen and (max-width: 1440px) {
        position: absolute;
        top: 20px;
        width: 40%;
        padding-right: 15px;
      }
    }
  }

  &__filters {
    margin: 10px 0;
    box-shadow: 0 0 5px rgba(0,0,0,0.2);
    box-sizing: border-box;
    padding-top: 20px;
    background: white;

    &__container {
      box-sizing: border-box;
      width: 100%;

      @media only screen and (max-width: 1440px) {
        width: 60%;
        padding-right: 10px;
      }
    }

    &__content {
      position: relative;
      display: flex;
      flex-wrap: wrap;
      align-items: flex-start;
    }

    &__date {
      display: flex;
      align-items: center;
      margin: 20px 5px;
      width: 50%;
      font-size: 12px;

      @media only screen and (max-width: 1440px) {
        margin: 10px 60px 10px 0;
        width: 100%;
      }

      &__quick {
        margin-left: 5px;

        &__item {
          padding: 0 5px;
          color: rgba(0, 0, 0, 0.5);
          cursor: pointer;

          &--active {
            padding-bottom: 3px;
            border-bottom: 2px solid $color-orange;
            color: black;
            font-weight: 500;
          }

          &--disabled {
            cursor: default;
          }
        }
      }

      &__range {
        margin-left: 40px;

        .daterangepicker {
          flex-wrap: wrap;
          width: 500px;

          .left {
            margin-left: 5px;
          }

          .ranges {
            flex-basis: 100%;
            margin-right: 20px;
            text-align: right;
          }
        }

        &__input {
          cursor: pointer;

          span {
            vertical-align: middle;
          }

          &__label {

          }

          &__value {
            margin: 0 5px 0 1px;
            border-bottom: 1px solid rgba(0, 0, 0, 0.1);
            color: rgba(0,0,0,0.5);
          }

          md-icon {
            vertical-align: middle;
            width: 18px;
            height: 18px;
            font-size: 18px;
          }
        }
      }
    }

    &__query {
      position: relative;
      margin-left: auto;
      width: 45%;
      z-index: 5;

      @media only screen and (max-width: 1440px) {
        margin-top: 20px;
        width: 100%;
      }

      &__input {
        transition: 0.75s ease-in-out;
        width: calc(100% - 100px);

        @media only screen and (max-width: 1440px) {
          width: 100%;
        }

        &--advanced {
          @media only screen and (min-width: 1441px) {
            transform: translateY(100px);
            transition: 0.75s ease-in-out;
          }

          md-input {
            .md-input-prefix {
              max-width: 100% !important;
            }

            .md-input-infix {
              display: none;
            }
          }
        }

        md-input {
          width: 100%;
          font-size: 14px;
          margin: 0;

          @media only screen and (max-width: 1440px) {
            margin: 0 10px;
            width: calc(100% - 20px);
          }
        }

        .md-input-wrapper {
          margin-top: 0;

          .md-input-table {
            display: flex;
            flex-flow: row;
            align-items: flex-end;
            height: 35px;

            .md-input-prefix {
              max-width: 70%;
            }
          }
        }

        &__prefix {
          position: relative;
          display: flex;
          flex-wrap: wrap;

          &__item {
            display: flex;
            align-items: center;
            justify-content: space-between;
            flex-grow: 1;
            margin: 2px;
            height: 30px;
            border-radius: 20px;
            background: rgba(0, 0, 0, 0.1);

            &__image {
              width: 30px;
              height: 30px;
              line-height: 30px;
              border-radius: 20px;
              background-color: $color-orange;
              text-align: center;
              color: white;
            }

            &__text {
              margin: 5px;
              font-size: 11px;
            }

            md-icon {
              margin-right: 5px;
              width: 16px;
              height: 16px;
              border-radius: 50%;
              background: gray;
              color: white;
              font-size: 16px;
              cursor: pointer;
            }
          }
        }

        .md-input-underline {
          .md-input-ripple {
            background-color: $color-orange;
          }
        }

        .md-input-placeholder.md-focused {
          color: $color-orange !important;
        }
      }

      &__suggestions {
        position: absolute;
        top: calc(100% + 8px);
        left: 100%;
        box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
        background-color: white;

        &__item {
          width: 150px;
          padding: 15px 10px;
          cursor: pointer;
          font-size: 0;

          &:hover {
            background-color: $color-orange;
            color: white;
          }

          &__image {
            display: inline-block;
            vertical-align: middle;
            margin-right: 10px;
            border-radius: 50%;
            width: 30px;
            height: 30px;
            line-height: 30px;
            background: #039BE5;
            text-align: center;
            font-size: 16px;
            color: white;
          }

          &__text {
            display: inline-block;
            vertical-align: middle;
            max-width: 110px;
            font-size: 11px;
          }
        }
      }
    }

    &__icons {
      position: absolute;
      display: flex;
      right: 10px;
      top: 18px;
      z-index: 5;

      @media only screen and (max-width: 1440px) {
        top: 10px;
      }

      md-icon {
        width: 20px;
        height: 20px;
        font-size: 20px;
        color: rgba(0, 0, 0, 0.87);
        cursor: pointer;
      }

      .share-link__container {
        top: 22px !important;
        right: -12px !important;
      }
    }

    &__advanced {
      margin: 0 5px;
      height: 190px;
      transition: height 0.75s cubic-bezier(0.35, 0, 0.25, 1);
      overflow: hidden;

      &--inactive {
        height: 0 !important;
      }

      &__row {
        display: flex;
        flex-wrap: wrap;
        align-items: center;

        &--flex {
          display: flex;
          width: 100%;
        }

        .first {
          @media only screen and (min-width: 1441px) {
            margin-right: 75px;
          }
        }

        md-input {
          font-size: 14px;
        }
      }

      &__large {
        max-width: 260px;
      }

      &__small {
        max-width: 90px;
      }

      &__dropdown {
        display: inline-block;
        box-sizing: border-box;
        margin: 15px 0 0;
        width: 50%;
        max-width: 280px;
        padding-left: 5px;

        &--active {
          color: rgba(0, 0, 0, 0.3);
        }

        span {
          display: flex;
          border-bottom: 1px solid rgba(0, 0, 0, 0.11);
          padding-bottom: 5px;
          max-width: 180px;
          font-size: 14px;
          cursor: pointer;

          md-icon {
            margin-left: auto;
            height: 16px;
            width: 16px;
            vertical-align: middle;
            font-size: 16px;
          }
        }

        .unselected {
          color: rgba(0, 0, 0, 0.35)
        }
      }
    }

    &__advanced-button {
      padding: 10px;
      text-align: right;
      color: #039BE5;
      font-size: 12px;

      span {
        cursor: pointer;
        margin-left: 10px;
      }
    }

    input-autocomplete {
      width: 50%;
      max-width: 280px;
    }
  }

  &__overview {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    margin: 10px 0 5px;

    &__item {
      width: calc(33.33% - 10px);
      margin-bottom: 15px;
    }

    md-spinner {
      margin: auto;
    }
  }

  &__chart {
    box-shadow: 0 0 5px rgba(0,0,0,0.2);
    background-color: white;

    &__title {
      position: relative;
      padding: 20px 10px 10px;

      &__main {
        margin-bottom: 5px;
        font-size: 18px;
      }

      &__sub {
        font-size: 12px;
        color: rgba(0,0,0,0.6);
      }

      md-icon {
        position: absolute;
        right: 10px;
        top: 16px;
        width: 20px;
        height: 20px;
        font-size: 20px;
        cursor: pointer;
      }
    }

    .highcharts-container {
      width: 100% !important;
      height: 100% !important;

      .highcharts-root {
        width: 100%;
        height: 100%;
      }
    }
  }

  &__funnel {
    margin: 10px 0;
    box-shadow: 0 0 5px rgba(0,0,0,0.2);
    background-color: white;

    &__title {
      position: relative;
      padding: 20px 10px 10px;
      border-bottom: 1px solid rgba(0, 0, 0, 0.2);

      &__main {
        margin-bottom: 5px;
        font-size: 18px;
      }

      &__sub {
        font-size: 12px;
        color: rgba(0,0,0,0.6);
      }

      md-icon {
        position: absolute;
        right: 10px;
        top: 16px;
        width: 20px;
        height: 20px;
        font-size: 20px;
        cursor: pointer;
      }
    }

    .highcharts-container {
      width: 100% !important;
      height: 100% !important;

      .highcharts-root {
        width: 100%;
        height: 100%;
      }
    }

    table {
      font-size: 12px;
      margin-bottom: 40px;

      @media only screen and (max-width: 1440px) {
        font-size: 10px;
      }

      thead {
        tr {
          th {
            padding: 15px;
            color: rgba(0,0,0,0.4);
            font-weight: 400;

            @media only screen and (max-width: 1440px) {
              padding: 10px;
            }
          }
        }
      }

      tbody {
        tr {
          border-bottom: 1px solid rgba(0, 0, 0, 0.1);

          td {
            padding: 15px;

            @media only screen and (max-width: 1440px) {
              padding: 10px;
            }
          }
        }
      }

      .color-indicator {
        display: inline-block;
        margin-right: 15px;
        height: 10px;
        width: 10px;
        border-radius: 50%;

        @media only screen and (max-width: 1440px) {
          margin-right: 5px;
        }
      }
    }

    &__actions {
      font-size: 14px;
      padding: 15px 20px;
      border-top: 1px solid rgba(0, 0, 0, 0.2);
      color: $color-orange;

      span {
        cursor: pointer;
      }
    }
  }

  &__boxes {
    margin-top: 20px;
  }
}

